bk_ida/gccida/g2/dwarf2out_frame_init
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_init/src/dwarf2out.c:2631:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)rtx->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_init/src/dwarf2out.c:2636:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 900, "initial_return_save"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_init/src/dwarf2out.c:2642:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 906, "initial_return_save"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_init/src/dwarf2out.c:2648:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 911, "initial_return_save"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_init/src/dwarf2out.c:2650:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 894, "initial_return_save"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_init/src/dwarf2out.c:2660:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 921, "initial_return_save"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_init/src/dwarf2out.c:2667:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 926, "initial_return_save"); 
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_init/src/obj/dwarf2out.o] Error 1
